Added some CSS to the movie component to line up each movie in the center of the page and put a border around each movie.

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,14 @@ body {
     
 }
 
+.movie {
+    margin: auto;
+    width: 50%;
+    border: 3px solid rgb(15, 6, 131);
+    padding: 10px;
+    text-align: center;
+}
+
 .time {
     color: crimson;
     margin: auto;
