imported the Link component from react-router-dom to use in the NavBar component. Added CSS to the Link tags.

--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,9 @@
     margin: auto;
     text-align: center;
 }
+
+.nav {
+    background-color: pink;
+    position: flex;
+    text-align: center
+}
