--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,11 @@ body {
 
 .movie {
     margin: auto;
-    width: 50%;
+    width: 25%;
     border: 4px solid rgb(15, 6, 131);
     padding: 10px;
     text-align: center;
-    
+
 }
 
 .movieButton {
@@ -43,10 +43,11 @@ body {
     padding: 10px;
     margin: auto;
     margin-left: 10px;
+    
 }
 
 .time {
-    color: crimson;
+    color: white;
     margin: auto;
     text-align: center;
 }
@@ -57,7 +58,7 @@ body {
     text-align: center;
     display: flex;
     
-    width: 50%;
+    width: 25%;
     gap: 1rem;
     padding: 0 1rem;
     
