Added additional CSS to the label elements, so now they are aligned in the center of the page.

--- a/src/index.css
+++ b/src/index.css
@@ -91,10 +91,9 @@ nav a.active {
 }
 
 .label {
-    /* display: flex;
-    padding: 100px; */
-    
-    display: flex;
+   
+  margin: auto;  
+  display: flex;
   flex-direction: row;
   justify-content: flex-end;
   text-align: right;
