--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@ body {
 }
 
  .App {
-    background-color: rgb(50, 50, 146);
+    background-color: rgb(22, 22, 146);
+   
 }
 
  .App-light {
-    background-color: rgb(214, 214, 235);
+    background-color: rgb(51, 159, 163);
 }
 
 .title {
@@ -32,7 +33,7 @@ body {
 .movie {
     margin: auto;
     width: 25%;
-    border: 4px solid rgb(15, 6, 131);
+    border: 4px solid rgb(69, 62, 165);
     padding: 10px;
     text-align: center;
 
@@ -120,3 +121,32 @@ nav a.active {
   margin-left: 10px;
   
 }
+
+  .homepage {
+    margin: auto;
+    text-align: center;
+    padding: 95px 0;
+    font-size: 35px;
+    
+  }
+
+  .homepage .favorite {
+    color: red;
+    
+  }
+
+  .homepage .awesome{
+    color: deepskyblue;
+  }
+
+  .homepage .Movie {
+    color: yellow;
+  }
+
+  .homepage .list {
+    color: darkgreen;
+  }
+
+
+
+  /* 329px */
